@@ -32,6 +32,9 @@ RELEASE 0.09 -
   - Fix the ASPPCOM values for the GNU assembler.
     (Bug reported by Brett Polivka.)
 
+  - Fix an exception thrown when a Default() directory was specified
+    when using the -U option.
+
  From Anthony Roach:
 
  - Fixed use of command lines with spaces in their arguments,
